--- a/hbase-build-configuration/pom.xml
+++ b/hbase-build-configuration/pom.xml
@@ -23,7 +23,7 @@
   <parent>
     <groupId>org.apache.hbase</groupId>
     <artifactId>hbase</artifactId>
-    <version>2.4.15-SNAPSHOT</version>
+    <version>2.4.15</version>
     <relativePath>..</relativePath>
   </parent>
 
