--- a/hbase-shaded/hbase-shaded-testing-util-tester/pom.xml
+++ b/hbase-shaded/hbase-shaded-testing-util-tester/pom.xml
@@ -24,7 +24,7 @@
   <parent>
     <groupId>org.apache.hbase</groupId>
     <artifactId>hbase-build-configuration</artifactId>
-    <version>2.6.0-SNAPSHOT</version>
+    <version>${revision}</version>
     <relativePath>../../hbase-build-configuration</relativePath>
   </parent>
 
