--- a/pom.xml
+++ b/pom.xml
@@ -559,6 +559,7 @@
     <javadoc.audience-annotations.version>0.13.0</javadoc.audience-annotations.version>
     <avro.version>1.8.2.7.2.18.0-SNAPSHOT</avro.version>
     <caffeine.version>2.8.1</caffeine.version>
+    <commons-cli.version>1.4</commons-cli.version>
     <commons-codec.version>1.15</commons-codec.version>
     <commons-io.version>2.11.0</commons-io.version>
     <commons-lang3.version>3.11</commons-lang3.version>
@@ -1071,6 +1072,11 @@
         <groupId>org.apache.httpcomponents</groupId>
         <artifactId>httpcore</artifactId>
         <version>${httpcore.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>commons-cli</groupId>
+        <artifactId>commons-cli</artifactId>
+        <version>${commons-cli.version}</version>
       </dependency>
       <dependency>
         <groupId>commons-codec</groupId>
